Small fixes
Enhance variables names.
Fix formatting errors.