@@ -15,7 +15,8 @@ import java.util.List;
 public class CreditsMenu implements Menu {
     private static final String name = "Credits";
 
-    public CreditsMenu(){}
+    public CreditsMenu() {
+    }
 
     @Override
     public String getName() {
@@ -24,7 +25,7 @@ public class CreditsMenu implements Menu {
 
     @Override
     public void run(ScreenGetter screenGetter, State state) throws IOException, InterruptedException {
-        //Get options
+        // Get options
         Screen screen;
 
         // While the active menu is this
@@ -42,13 +43,13 @@ public class CreditsMenu implements Menu {
             KeyStroke keyStroke = screen.pollInput();
             if (keyStroke != null) {
                 switch (keyStroke.getKeyType()) {
-                    case Enter -> this.executeOption(state);
-                    case Escape -> this.executeOption(state);
+                    case Enter -> this.returnToMainMenu(state);
+                    case Escape -> this.returnToMainMenu(state);
                     case EOF -> this.handleEOFCharacter(screenGetter, state);
                 }
                 if (keyStroke.getCharacter() != null) {
                     switch (keyStroke.getCharacter()) {
-                        case 'Q', 'q', 'E', 'e' -> this.executeOption(state);
+                        case 'Q', 'q', 'E', 'e' -> this.returnToMainMenu(state);
                     }
                 }
             }
@@ -70,84 +71,86 @@ public class CreditsMenu implements Menu {
         int offsetX = 4;
 
         // Draw Title
-        List<String> title = new ArrayList<>();
-        title.add(CreditsMenu.name);
-        title.add("───────────");
+        List<String> titleLines = new ArrayList<>();
+        titleLines.add(CreditsMenu.name);
+        titleLines.add("───────────");
 
-        for (int i = 0; i < title.size(); i++) {
+        for (int i = 0; i < titleLines.size(); i++) {
             textGraphics
                     .setForegroundColor(TextColor.Factory.fromString("#DAA520"))
                     .putString(
                             offsetX,
                             centerY - 8 + i,
-                            title.get(i)
+                            titleLines.get(i)
                     );
         }
 
-        //Draw UC Info
-        List<String> ucInfo = new ArrayList<>();
-        ucInfo.add("2024/2025");
-        ucInfo.add("FEUP L.EIC014 - LDTS");
+        // Draw UC Info
+        List<String> ucInfoLines = new ArrayList<>();
+        ucInfoLines.add("2024/2025");
+        ucInfoLines.add("FEUP L.EIC014 - LDTS");
 
-        for (int i = 0; i < title.size(); i++) {
+        for (int i = 0; i < titleLines.size(); i++) {
             textGraphics
                     .setForegroundColor(TextColor.ANSI.WHITE)
                     .putString(
-                            screen.getTerminalSize().getColumns() - offsetX - ucInfo.get(i).length(),
+                            screen.getTerminalSize().getColumns() - offsetX - ucInfoLines.get(i).length(),
                             centerY - 8 + i,
-                            ucInfo.get(i)
+                            ucInfoLines.get(i)
                     );
         }
 
-        //Draw Authors' Name
-        List<String> nameAuthor = new ArrayList<>();
-        nameAuthor.add("T14G01:");
-        nameAuthor.add("Cláudio Meireles");
-        nameAuthor.add("Dinis Silva");
-        nameAuthor.add("Miguel Pereira");
+        // Draw Authors
+        List<String> authorsLines = new ArrayList<>();
+        authorsLines.add("T14G01:");
+        authorsLines.add("Cláudio Meireles");
+        authorsLines.add("Dinis Silva");
+        authorsLines.add("Miguel Pereira");
 
+        // Authors title
         textGraphics
                 .setForegroundColor(TextColor.ANSI.WHITE)
                 .putString(
-                        offsetX + 2,
+                        offsetX + 3,
                         centerY - 3,
-                        nameAuthor.get(0)
+                        authorsLines.getFirst()
                 );
 
-        for (int i = 1; i < nameAuthor.size(); i++) {
+        // Authors names
+        for (int i = 1; i < authorsLines.size(); i++) {
             textGraphics
                     .setForegroundColor(TextColor.ANSI.WHITE)
                     .putString(
                             offsetX + 3,
                             centerY + i - 2,
-                            nameAuthor.get(i)
+                            authorsLines.get(i)
                     );
         }
 
-        //Draw Regent and Supervisor Names
-        List<String> names = new ArrayList<>();
-        names.add("Rui Maranhão");
-        names.add("Juvenaldo Carvalho");
+        // Draw Regent and Supervisor Names
+        List<String> professorsLines = new ArrayList<>();
+        professorsLines.add("Rui Maranhão");
+        professorsLines.add("Juvenaldo Carvalho");
 
-        for (int i = 0; i < names.size(); i++){
+        for (int i = 0; i < professorsLines.size(); i++) {
             textGraphics
                     .setForegroundColor(TextColor.ANSI.WHITE)
                     .putString(
-                            screen.getTerminalSize().getColumns() - offsetX - names.get(i).length(),
+                            screen.getTerminalSize().getColumns() - offsetX - professorsLines.get(i).length(),
                             centerY + i - 1,
-                            names.get(i)
+                            professorsLines.get(i)
                     );
         }
 
-        //Draw Back Button
+        // Draw Back Button
         String backText = "Back";
         textGraphics
                 .setForegroundColor(TextColor.ANSI.YELLOW)
-                        .putString(
-                                centerX - backText.length() / 2,
-                                screen.getTerminalSize().getRows() - 3,
-                                backText
-                        );
+                .putString(
+                        centerX - backText.length() / 2,
+                        screen.getTerminalSize().getRows() - 3,
+                        backText
+                );
 
         // Update Screen
         screen.refresh();
@@ -155,7 +158,7 @@ public class CreditsMenu implements Menu {
 
     //Set next menu to the selected option
     //By now, the only option is to go back to Main Menu
-    private void executeOption(State state) {
+    private void returnToMainMenu(State state) {
         Menu nextMenu = new MainMenu();
         state.setNextMenu(nextMenu);
     }
